--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
           <h2>My Skills</h2>
           <div class="custom-list">
             <h3>Technical Skills</h3>
-            <li>B2B Marketing</li>
-            <li>Webpage Management</li>
-            <li>WordPress CMS</li>
-            <li>Content Creation</li>
+            <li>Content Marketing</li>
             <li>Copywriting</li>
+            <li>B2B Marketing</li>
+            <li>WordPress CMS</li>
+            <li>Webpage Management</li>
             <li>Email Marketing</li>
             <li>Social Media Marketing</li>
             <li>Graphic Designing & Coordination</li>
             <li>Event Marketing</li>
-            <li>Search Engine Optimization</li>
-            <li>Public Relation</li>
+            <li>Search Engine Optimization (SEO)</li>
+            <li>Public Relation (PR)</li>
           </div>
 
           <div class="custom-list">
@@ -211,8 +211,8 @@
               <p><em>I have been working as a Content Creator for more than three years, where my primary responsibilities encompass content creation, email marketing, social media management, and more. Here is a summary of my current job responsibilities:</em></p>
               <ul>
                 <li><b>Webpage Management:</b> I fully manage, publish, edit, and create webpages on WordPress and Elementor, along with implementing Schema markup.</li>
-                <li><b>Content Creation:</b> I create various forms of content, both long and short, such as articles, blogs, ebooks, whitepapers, PRs, and guides. Additionally, I optimize existing content to improve its performance.</li>
-                <li><b>Copywriting:</b> I craft compelling headlines and Call To Action copy, collaborating closely with the Growth Marketer Strategist.</li>
+                <li><b>Content Marketing:</b> I market various forms of content, both long and short, such as articles, blogs, ebooks, whitepapers, PRs, and guides. Additionally, optimizing and maintaining existing content to improve the performance.</li>
+                <li><b>Copywriting:</b> I craft compelling headlines and Call To Action copy, collaborating closely with the Growth Marketing Strategist and Sales Executives.</li>
                 <li><b>Email Marketing:</b> I actively participate in the entire email marketing process, including campaign planning, content creation, list management, and performance analysis.</li>
                 <li><b>Social Media Management:</b> I single-handedly manage all the social media platforms, creating and scheduling posts, engaging with the audience, and monitoring analytics.</li>
                 <li><b>Graphic Design Coordination:</b> I collaborate with the graphic designer to create visually appealing and informative content assets like images, banners, PDFs, thumbnails, etc.</li>
@@ -270,7 +270,7 @@
               <p><i>Native or bilingual proficiency</i></p>
             </div>
             <div class="resume-item">
-              <h4>German</h4>
+              <h4>Deutsch</h4>
               <p><i>Elementary Proficiency (A2)</i></p>
             </div>
           </div>
