--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -148,7 +148,7 @@
               <p>
                 Crafting the article on "ASPICE | Definition, Compliance, Tools, & Certifications" proved to be a challenging yet rewarding experience. Exploring the intricate world of ASPICE (Automotive SPICE) required a deep dive into the realm of automotive software development. Drawing on the insights gained during my internship at an automobile website, I found a solid foundation to demystify some complexities. However, grappling with the nuances of the tools and their precise role in addressing industry pain points posed a formidable challenge. The endeavor was a testament to the learning curve, where each hurdle was an opportunity to enhance my understanding and deliver a more comprehensive narrative.
               </p>
-              <button class="check-out"> <a href="assets-portfolio/https://visuresolutions.com/blog/automotive/aspice/" target="_blank">Check Out Now</a></button>
+              <button class="check-out"> <a href="https://visuresolutions.com/blog/automotive/aspice/" target="_blank">Check Out Now</a></button>
             </div>
           </div>
         </div>
