--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>Hello! I'm Anushtha, an enthusiastic Content Creator with a versatile skill set including content creation, email marketing, social media management, and web development. I have a proven track record of boosting online engagement and optimizing digital campaigns, driven by a keen attention to detail and a passion for delivering results in fast-paced environments.</p> <br>
+          <p>Hello! I'm Anushtha, an enthusiastic Content Marketer with a versatile skill set including content creation, email marketing, social media management, and web development. I have a proven track record of boosting online engagement and optimizing digital campaigns, driven by a keen attention to detail and a passion for delivering results in fast-paced environments.</p> <br>
 
           <p>Beyond the digital realm, I have a sweet spot for the delightful world of baking. Originally from Delhi, I proudly graduated from the University of Delhi. Immersing myself in books is my favorite pastime, while music and pizza are my trusted companions.</p>
         </div>
 
             <h3>My Professional Journey</h3>
             <p>
-              I am Content Creator with over 4 years of rich experience. My professional journey commenced during my college days with an internship for an American Automobile website where I served as a ghostwriter, penning around 150 articles, ranging from in-depth analyses to feature-specific pieces. This early exposure laid the foundation for my passion in content creation.</p>
+              I am a Content Marketer with over 4 years of rich experience. My professional journey commenced during my college days with an internship for an American Automobile website where I served as a ghostwriter, penning around 150 articles, ranging from in-depth analyses to feature-specific pieces. This early exposure laid the foundation for my passion for content marketing.</p>
 
-              <p>Embracing a fast-paced environment with strict deadlines has been a consistent theme in my career. I've expanded my horizons beyond content creation, having served as a WordPress Developer in various roles. During my tenure with The Research Pedia I single-handedly managed 4 client websites and crafted over 130 web pages using WordPress CMS including creating images using Canva.
+              <p>Embracing a fast-paced environment with strict deadlines has been a consistent theme in my career. I've expanded my horizons beyond content creation, having served as a WordPress Developer in various roles. During my tenure with The Research Pedia, I single-handedly managed 4 client websites and crafted over 130 web pages using WordPress CMS including creating images using Canva.
             </p>
           
             <p>
@@ -109,7 +109,7 @@
               <p>A notable achievement at Visure is the substantial growth in website traffic, escalating from 12,000 in April 2022 to over 72,000 in January 2023. This accomplishment underscores my commitment to driving tangible results in every professional endeavor.
             </p>
 
-            <p>Navigating a global team scattered across different time zones at Visure Solutions has become second nature to me, showcasing my adept coordination skills in the midst of geographical diversity. Throughout my career, the fast-paced environment and stringent deadlines have been the backdrop against which I've honed my skills and delivered results. Looking forward to new horizons and challenges!
+            <p>Navigating a global team scattered across different time zones at Visure Solutions has become second nature to me, showcasing my adept coordination skills amid geographical diversity. Throughout my career, the fast-paced environment and stringent deadlines have been the backdrop against which I've honed my skills and delivered results. Looking forward to new horizons and challenges!
             </p>
           </div>
         </div>
@@ -211,7 +211,7 @@
               <p><em>I have been working as a Content Creator for more than three years, where my primary responsibilities encompass content creation, email marketing, social media management, and more. Here is a summary of my current job responsibilities:</em></p>
               <ul>
                 <li><b>Webpage Management:</b> I fully manage, publish, edit, and create webpages on WordPress and Elementor, along with implementing Schema markup.</li>
-                <li><b>Content Marketing:</b> I market various forms of content, both long and short, such as articles, blogs, ebooks, whitepapers, PRs, and guides. Additionally, optimizing and maintaining existing content to improve the performance.</li>
+                <li><b>Content Marketing:</b> I market various forms of content, both long and short, such as articles, blogs, ebooks, whitepapers, PRs, and guides. Additionally, optimizing and maintaining existing content to improve performance.</li>
                 <li><b>Copywriting:</b> I craft compelling headlines and Call To Action copy, collaborating closely with the Growth Marketing Strategist and Sales Executives.</li>
                 <li><b>Email Marketing:</b> I actively participate in the entire email marketing process, including campaign planning, content creation, list management, and performance analysis.</li>
                 <li><b>Social Media Management:</b> I single-handedly manage all the social media platforms, creating and scheduling posts, engaging with the audience, and monitoring analytics.</li>
@@ -251,7 +251,7 @@
               <h4>Intern Content Writer </h4>
               <h5>Mar 20 - Feb 21</h5>
               <p><em>Collegedunia</em></p>
-              <p>Worked as an intern content writer for an American automobile website where my responsibilities included ghost-writing meaningful, plagiarism-free, and detailed articles on old as well as upcoming vehicles.</p>
+              <p>Worked as an intern content writer for an American automobile website where my responsibilities included ghostwriting meaningful, plagiarism-free, and detailed articles on old as well as upcoming vehicles.</p>
             </div>
             <div class="resume-item">
               <h4>WordPress Developer </h4>
