--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets-portfolio/Cropped Portfolio Pic copy.png" alt="" class="img-fluid rounded-circle">
+        <img src="assets-portfolio/My Profile Pic.png" alt="" class="img-fluid rounded-circle">
         <!-- <h1 class="text-light"><a href="index.html">Anushtha Jain</a></h1> -->
         <div class="social-links mt-3 text-center">
           <a href="mailto:anushtha.jain1080@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
